Initial SEO optimizations

--- a/index.html
+++ b/index.html
@@ -2,36 +2,71 @@
 <html class="no-js" lang="en">
 
 <head>
+    <!-- Primary Meta Tags -->
+    <title>Ravan Mammadov | Frontend Web Developer in Azerbaijan</title>
+    <meta name="description"
+        content="I'm Ravan Mammadov, a frontend developer from Azerbaijan, creating elegant, responsive, and modern web experiences using React, Next.js, and more.">
+    <meta name="keywords"
+        content="Ravan Mammadov, frontend developer, web developer Azerbaijan, React developer, Next.js portfolio, developer for hire Baku">
+    <meta name="author" content="Ravan Mammadov">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!--- basic page needs
-    ================================================== -->
-    <meta charset="utf-8">
-    <title>Ravan</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ravan.it.com/">
+    <meta property="og:title" content="Ravan Mammadov | Frontend Web Developer">
+    <meta property="og:description"
+        content="Modern, performant, and beautiful web solutions by Ravan Mammadov — React/Next.js specialist.">
+    <meta property="og:image" content="https://ravan.it.com/preview.jpg">
 
-    <!-- mobile specific metas
-    ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ravan.it.com/">
+    <meta property="twitter:title" content="Ravan Mammadov | Frontend Web Developer">
+    <meta property="twitter:description"
+        content="Explore the portfolio of Ravan Mammadov, a frontend developer crafting fast, clean, and user-friendly websites.">
+    <meta property="twitter:image" content="https://ravan.it.com/preview.jpg">
 
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-    <!-- script
-    ================================================== -->
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://ravan.it.com/">
 
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.svg">
-    <link rel="manifest" href="site.webmanifest">
+    <!-- Fonts and Icons (Optional) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/styles/global.css">
+
+    <!-- Structured Data (JSON-LD) for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Ravan Mammadov",
+      "url": "https://ravan.it.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/ravanmammadov",
+        "https://github.com/ravanm"
+      ],
+      "jobTitle": "Frontend Web Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Unitech Development"
+      },
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Khazar University"
+      }
+    }
+    </script>
 </head>
+
 
 <body id="top">
 
@@ -59,9 +94,11 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.instagram.com/1903.revan/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/1903.revan/"><i class="fab fa-instagram"
+                            aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/RavanM2003"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-                <li><a href="https://linkedin.com/in/mammadovravan"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://linkedin.com/in/mammadovravan"><i class="fab fa-linkedin"
+                            aria-hidden="true"></i></a></li>
             </ul>
         </nav>
 
@@ -317,7 +354,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/atf.png" class="thumb-link" title="Azərbaycan Ticarət Forumu"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/atf.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/atf.png"
                                     srcset="images/portfolio/atf.png 1x, images/portfolio/atf.png 2x" alt="">
                             </a>
                             <a href="https://atf-src.vercel.app/" class="item-folio__project-link" title="Project link"
@@ -347,7 +385,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/birgekod.png" class="thumb-link" title="Woodcraft"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/birgekod.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/birgekod.png"
                                     srcset="images/portfolio/birgekod.png 1x, images/portfolio/birgekod.png 2x" alt="">
                             </a>
                             <a href="https://birgekod.az/" class="item-folio__project-link" title="Project link"
@@ -376,7 +415,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/bn.png" class="thumb-link" title="The Beetle Car"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/bn.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/bn.png"
                                     srcset="images/portfolio/bn.png 1x, images/portfolio/bn.png 2x" alt="">
                             </a>
                             <a href="https://bn.smb.gov.az/" class="item-folio__project-link" title="Project link"
@@ -405,7 +445,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/e-kob.png" class="thumb-link" title="Grow Green"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/e-kob.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/e-kob.png"
                                     srcset="images/portfolio/e-kob.png 1x, images/portfolio/e-kob.png 2x" alt="">
                             </a>
                             <a href="https://e-kob.gov.az/" class="item-folio__project-link" title="Project link"
@@ -437,7 +478,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/kobklaster.png" class="thumb-link" title="Guitarist"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/kobklaster.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/kobklaster.png"
                                     srcset="images/portfolio/kobklaster.png 1x, images/portfolio/kobklaster.png 2x"
                                     alt="">
                             </a>
@@ -468,7 +510,8 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/mttm.png" class="thumb-link" title="Palmeira"
                                 data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/mttm.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/mttm.png"
                                     srcset="images/portfolio/mttm.png 1x, images/portfolio/mttm.png 2x" alt="">
                             </a>
                             <a href="https://mttm.org.az/" class="item-folio__project-link" title="Project link"
@@ -497,7 +540,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/uys.png" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img style="border: 10px solid black; border-radius: 16px;" src="images/portfolio/uys.png"
+                                <img style="border: 10px solid black; border-radius: 16px;"
+                                    src="images/portfolio/uys.png"
                                     srcset="images/portfolio/uys.png 1x, images/portfolio/uys.png 2x" alt="">
                             </a>
                             <a href="https://uys.az/" class="item-folio__project-link" title="Project link"
