--- a/index.html
+++ b/index.html
@@ -13,47 +13,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ravan.it.com/">
-    <meta property="og:title" content="Ravan Mammadov | Frontend Web Developer">
-    <meta property="og:description"
-        content="Modern, performant, and beautiful web solutions by Ravan Mammadov — React/Next.js specialist.">
-    <meta property="og:image" content="https://ravan.it.com/preview.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://ravan.it.com/">
-    <meta property="twitter:title" content="Ravan Mammadov | Frontend Web Developer">
-    <meta property="twitter:description"
-        content="Explore the portfolio of Ravan Mammadov, a frontend developer crafting fast, clean, and user-friendly websites.">
-    <meta property="twitter:image" content="https://ravan.it.com/preview.jpg">
-
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.svg">
+    <link rel="manifest" href="site.webmanifest">
 
     <!-- Canonical Link -->
     <link rel="canonical" href="https://ravan.it.com/">
 
-    <!-- Fonts and Icons (Optional) -->
+    <!-- Fonts and Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- script
-    ================================================== -->
+    <!-- Scripts -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.svg">
-    <link rel="manifest" href="site.webmanifest">
 
     <!-- Structured Data (JSON-LD) for Google -->
     <script type="application/ld+json">
@@ -63,8 +44,9 @@
       "name": "Ravan Mammadov",
       "url": "https://ravan.it.com",
       "sameAs": [
-        "https://www.linkedin.com/in/ravanmammadov",
-        "https://github.com/ravanm"
+        "https://www.linkedin.com/in/mammadovravan",
+        "https://github.com/RavanM2003",
+        "https://www.instagram.com/1903.revan/"
       ],
       "jobTitle": "Frontend Web Developer",
       "worksFor": {
@@ -73,11 +55,12 @@
       },
       "alumniOf": {
         "@type": "CollegeOrUniversity",
-        "name": "Khazar University"
+        "name": "Azerbaijan State Oil and Industry University"
       }
     }
     </script>
 </head>
+
 
 
 <body id="top">
